[package]
name = "tide-acme"
version = "0.2.0"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
description = "Automatic HTTPS certificates for Tide, via Let's Encrypt and ACME tls-alpn-01 challenges"
keywords = ["acme", "autocert", "https", "tls", "alpn"]
edition = "2018"
repository = "https://github.com/http-rs/tide-acme"
license = "MIT OR Apache-2.0"
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
async-std = "1.11.0"
async-trait = "0.1.48"
futures-lite = "1.12.0"
rustls-acme = "0.3.0"
tide-rustls = "0.3.0"
tracing = { version = "0.1.34", default-features = false }

[dev-dependencies]
tide = "0.16.0"
